--- a/Kinect_WpfProject/Kinect_WpfProject/View/Menu.xaml
+++ b/Kinect_WpfProject/Kinect_WpfProject/View/Menu.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Kinect_WpfProject.View.Menu"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow"  Background="#343838" Cursor="Hand"  Height="363.971" Width="606.617"  WindowState="Normal" WindowStartupLocation="CenterScreen">
+        Title="MainWindow"  Background="#343838" Cursor="Hand"  Height="363.971" Width="606.617"  WindowState="Normal" WindowStartupLocation="CenterScreen" MouseEnter="Window_MouseEnter">
     <Window.Resources>
         <Storyboard x:Key="LeftStoryboard_F">
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)" Storyboard.TargetName="Main_menu">
@@ -93,7 +93,7 @@
             <ColumnDefinition Width="55*"/>
             <ColumnDefinition Width="241*"/>
         </Grid.ColumnDefinitions>
-        <Canvas x:Name="Main_menu" Background="Transparent" RenderTransformOrigin="0.5,0.5" Grid.ColumnSpan="2" Margin="10,0,-10,0" Grid.RowSpan="2">
+        <Canvas x:Name="Main_menu" Background="Transparent" RenderTransformOrigin="0.5,0.5" Grid.ColumnSpan="2" Margin="10,0,-10,0" Grid.RowSpan="2" Loaded="Main_menu_Loaded">
             <Canvas.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
